# Wallet-System

./: Dockerfile  README.md  docker-compose.yml  pom.xml  prometheus.yml
.github/workflows/: ci-cd.yml
chatbot/: .env.example  Dockerfile  README.md  pyproject.toml
chatbot/src/: prompts.py  server.py  tools.py
chatbot/src/agent/: graph.py  state.py
chatbot/tests/: test_agent.py
chatbot/wallet_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWidget.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx  Transfer.jsx
frontend/src/services/: api.js
src/main/java/com/example/wallet/: WalletApplication.java
src/main/java/com/example/wallet/config/: AppConfig.java  RabbitMQConfig.java
src/main/java/com/example/wallet/controller/: AiController.java  AuthController.java  BankTransactionController.java  BankWebhookController.java  HomeController.java  PaymentWebhookController.java  WalletController.java
src/main/java/com/example/wallet/dto/: SepayWebhookRequest.java
src/main/java/com/example/wallet/entity/: BankTransaction.java  Transaction.java  User.java  Wallet.java
src/main/resources/: application.yml
src/main/resources/db/migration/: V1__init_schema.sql  V3__add_phone_and_category.sql  V8__create_bank_transactions_table.sql  V9__update_bank_transactions_status.sql
src/test/java/com/example/wallet/: WalletApplicationTests.java
src/test/resources/: application-test.yml
(+27 files in other folders)
